[gd_scene load_steps=3 format=2]

[ext_resource path="res://Screens/Menu/Lobby/Lobby.gd" type="Script" id=1]
[ext_resource path="res://Screens/Menu/Lobby/LobbyDecision.tscn" type="PackedScene" id=2]

[node name="Lobby" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="LobbyDecision" parent="." instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1024.0
margin_bottom = 600.0

[connection signal="host" from="LobbyDecision" to="." method="_on_LobbyDecision_host"]
[connection signal="join" from="LobbyDecision" to="." method="_on_LobbyDecision_join"]
